syntax = "proto3";

package protobuf;

enum MessageType{
    META = 0;
    PACKAGE = 1;
    ACK = 2;
}

message FileMeta{
    bytes id = 1;
    MessageType msgType = 2; 
    string namespace = 3;
    string project = 4;  
    string jobID = 5;
    string filename = 6;
    bytes hash = 7;
}

message FilePackage{
    bytes id = 1;
    MessageType msgType = 2;
    bytes payload = 3;
    bool isTerminated = 4;

}

message ServerAck{
    bytes id = 1;
    MessageType msgType = 2;
    bool serverSuccess = 3;
}

message LockerMessage{
    oneof message {
        FileMeta meta = 1;
        FilePackage package = 2;
        ServerAck ack = 3;
    }
}