syntax = "proto3";

package protobuf;

enum MessageType{
    META = 0;
    PACKAGE = 1;
    ACK = 2;
}

message FileInfo {
    int32 id = 1;    
    MessageType msgType = 2;   
    string payload = 3;
}

message FileMeta{
    int32 id = 1;
    string filename = 2;
    string hash = 4;
}

message TestMessage{
    int32 id = 1;
    string string = 2;
    uint32 uint = 3;
    MessageType enum = 4;
}